# u-pipeline

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
docs/: config-reference.md  rbc-q1-2026-investor-slides-runbook.md  test_queries.yaml
scripts/: prompt-template-standard.md  seed_data.py  setup.py  setup_database.py  setup_phase2.py
scripts/seed-data/: columns.json
u-debug/: pyproject.toml  trace-review-findings.md
u-debug/src/debug/: __main__.py  app.py
u-debug/src/debug/api/: queries.py  retrieval.py  traces.py
u-debug/src/debug/static/: app.js  index.html  style.css
u-debug/tests/: conftest.py  test_app.py  test_main_entry.py  test_queries.py  test_retrieval.py  test_traces.py
u-ingestion/: .env.example  pyproject.toml
u-ingestion/tests/: conftest.py  test_checkpointing.py  test_chunking.py  test_classification.py  test_config_setup.py  test_content_extraction.py  test_discovery.py  test_doc_metadata.py  test_doc_summary.py  test_docx_processor.py  test_embedding.py  test_enrichment_prompts.py  test_extraction.py  test_file_types.py  test_fitz_rendering.py  test_llm_connector.py  test_llm_retry.py  test_main.py  (+17 more)
u-retriever/: .env.example  pyproject.toml
u-retriever/src/retriever/: main.py  models.py
u-retriever/src/retriever/stages/: consolidate.py  expand.py  orchestrator.py  query_prep.py  rerank.py  research.py  search.py  startup.py
u-retriever/src/retriever/stages/prompts/: consolidation.yaml  query_prep.yaml  rerank.yaml  research.yaml
u-retriever/src/retriever/utils/: citation_validator.py  config_setup.py  llm_connector.py  logging_setup.py  metrics_aggregator.py  oauth_connector.py  postgres_connector.py  prompt_loader.py  ssl_setup.py  trace_store.py
u-retriever/tests/: conftest.py  test_citation_validator.py  test_config_setup.py  test_consolidate.py  test_expand.py  test_harness.py  test_llm_connector.py  test_metrics_aggregator.py  test_models.py  test_orchestrator.py  test_postgres_connector.py  test_query_prep.py  test_rerank.py  test_research.py  test_search.py
(+75 files in other folders)
